--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="cordova.js" *ngIf="isSmartPhone()"></script>
 <ons-page>
   <ons-toolbar [attr.modifier]="modifier">
       <div class="center">app.html header</div>
