--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -8,8 +8,7 @@
 
 <hr />
 
-<ons-list-item expandable *ngFor="let item of list3"
-  [class.selected]="item === selectedItem">
+<ons-list-item expandable *ngFor="let item of list3">
   <div class="left">
     <img class="list-item__thumbnail" src="{{item.img1}}">
   </div>
