--- a/src/app/home/preview.html
+++ b/src/app/home/preview.html
@@ -22,13 +22,13 @@
   </div>
 </ons-toolbar>
 
-<!-- DB連携の確認用（確認後消す） -->
+<!-- DB連携の確認用の１行コード（確認後消す） -->
 <p>clicked number is No.{{num}} !</p>
 
 <div>
   <p>保存日：</p>
-  <p>{{get_list.date_str}}</p>
-  <img class="preview_img" src="{{get_list.img2}}">
+  <p>{{item.date_str}}</p>
+  <img class="preview_img" src="{{item.img2}}">
   <p>メモ：</p>
-  <p>{{get_list.memo_str}}</p>
+  <p>{{item.memo_str}}</p>
 </div>
