--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -1,13 +1,16 @@
-<p (click)="onCloseClicked()">
-  <ons-icon
-  icon="fa-backward"
-  size="30px"
-  fixed-width="false"
-  style="color: red">
-  </ons-icon>
-</p>
-
-<p>編集画面</p>
+<ons-toolbar [attr.modifier]="modifier">
+  <div class="center">編集</div>
+  <div class="right" (click)="onCloseClicked()">
+    <ons-toolbar-button>
+      <ons-icon
+      icon="fa-times"
+      size="30px"
+      fixed-width="false"
+      style="color: gray">
+      </ons-icon>
+    </ons-toolbar-button>
+  </div>
+</ons-toolbar>
 
 <p>
 <label>Date:
@@ -22,7 +25,7 @@
 </p>
 
 <p>
-  <img src="{{get_list.img2}}" (click)="onImgChange()">
+  <img src="{{item.img2}}" (click)="onImgChange()">
 </p>
 
 <p (click)="onEditEndClicked()">
