--- a/src/app/home/preview.html
+++ b/src/app/home/preview.html
@@ -1,26 +1,31 @@
-<ons-list-header></ons-list-header>
-
-<p (click)="onCloseClicked()">
-  <ons-icon
-  icon="fa-backward"
-  size="30px"
-  fixed-width="false"
-  style="color: red">
-  </ons-icon>
-</p>
-<p (click)="onEditClicked()">
-  <ons-icon
-  icon="fa-edit"
-  size="30px"
-  fixed-width="false"
-  style="color: red">
-  </ons-icon>
-</p>
-
-<p>clicked number is {{num}} !</p>
+<ons-toolbar [attr.modifier]="modifier">
+  <div class="left" (click)="onCloseClicked()">
+    <ons-toolbar-button>
+      <ons-icon
+        icon="fa-backward"
+        size="30px"
+        fixed-width="false"
+        style="color: gray">
+      </ons-icon>
+    </ons-toolbar-button>
+  </div>
+  <div class="center">プレビュー</div>
+  <div class="right" (click)="onEditClicked()">
+    <ons-toolbar-button>
+      <ons-icon
+        icon="fa-edit"
+        size="30px"
+        fixed-width="false"
+        style="color: gray">
+      </ons-icon>
+    </ons-toolbar-button>
+  </div>
+</ons-toolbar>
 
 <div>
-  <p>{{get_list.date_str}}</p>
-  <img src="{{get_list.img2}}">
-  <p>{{get_list.memo_str}}</p>
+  <p>保存日：</p>
+  <p>{{item.date_str}}</p>
+  <img class="preview_img" src="{{item.img2}}">
+  <p>メモ：</p>
+  <p>{{item.memo_str}}</p>
 </div>
