ブラウザカメラを使えるようにした

--- a/src/app/main-tab.html
+++ b/src/app/main-tab.html
@@ -4,7 +4,7 @@
       <div class="tabbar">
           <ons-tab icon="fa-home" label="ホーム" [page]="home" active></ons-tab>
           <ons-tab icon="fa-wrench" label="設定" [page]="setting"></ons-tab>
-          <ons-tab icon="fa-plus" label="追加" (click)="onPlusButtonClick()" [page]="add"></ons-tab>
+          <ons-tab icon="fa-plus" label="追加" (click)="onPlusButtonClick()"></ons-tab>
       </div>
   </ons-tabbar>
 </div>
