--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -3,14 +3,22 @@
 </ons-toolbar>
 
 <ons-list-item expandable *ngFor="let item of list3">
+<!--  profileアイコンを一時的に非表示にしています。
   <div class="left">
     <img class="list-item__thumbnail" src="{{item.img1}}">
   </div>
+-->
   <div class="center">
-    <span class="list-item__title">{{item.date_str}}</span>
+    <div class="heading_container">
+      <div class="list-item__num">{{item.num_str}}</div>
+      <div class="list-item__date">{{item.date_str}}</div>
+    </div>
     <span class="list-item__subtitle">{{item.memo_str}}</span>
   </div>
   <div class="expandable-content">
-    <img class="expandable-img" src="{{item.img2}}" (click)="onListClicked(item)">
+    <div class="img_container">
+      <img class="expandable-img" src="{{item.img2}}" (click)="onListClicked(item)">
+      <i class="far fa-eye"></i>
+    </div>
   </div>
 </ons-list-item>
