--- a/src/app/main-tab.html
+++ b/src/app/main-tab.html
@@ -1,10 +1,10 @@
 <div class="content">
   <ons-tabbar [attr.animation]="animation" position="auto">
-      <div class="tabbar__content"></div>
-      <div class="tabbar">
-          <ons-tab icon="fa-home" label="ホーム" [page]="home" active></ons-tab>
-          <ons-tab icon="fa-wrench" label="設定" [page]="setting"></ons-tab>
-          <ons-tab icon="fa-plus" label="追加" (click)="onPlusButtonClick()"></ons-tab>
-      </div>
+    <div class="tabbar__content"></div>
+    <div class="tabbar">
+      <ons-tab icon="fa-home" label="ホーム" [page]="home" active></ons-tab>
+      <ons-tab icon="fa-wrench" label="設定" [page]="setting"></ons-tab>
+      <ons-tab icon="fa-camera" label="追加" (click)="onPlusButtonClick()"></ons-tab>
+    </div>
   </ons-tabbar>
 </div>
