--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,81 @@
 /* You can add global styles to this file, and also import other style files */
+/* Header area  */
+.toolbar {
+  background: #46AAFF;
+  height: 45px;
+}
+.center.toolbar__center.toolbar__title {
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.16);
+}
+
+.list-item.list-item--expandable {
+  width: 90%;
+  margin: 15px auto;
+  background: #FFFFDB;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.16);
+}
+
+/* Footer area  */
+.tabbar{
+  height: 50px;
+  &.ons-tabbar__footer.ons-swiper-tabbar {
+    background: #46AAFF;
+  }
+}
+.tabbar__button {
+  color: #fff;
+}
+:checked + .tabbar__button {
+  color: #f1eb0d;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.16);
+}
+
+/* Home Contents area  */
+.toolbar .list-item--chevron:before, .list-item__expand-chevron {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: #FFAA00;
+  border:none;
+}
+
+.page__content{
+  .list-item__expand-chevron {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+    margin: 1px;
+    &::after {
+      content: "";
+      border-bottom: 4px solid #fff;
+      width: 15px;
+      display: block;
+      position: absolute;
+      top: 10px;
+      left: 5px;
+    }
+  }
+
+  .list-item--expandable{
+    .list-item__expand-chevron::before {
+      content: "";
+      border-bottom: 4px solid #fff;
+      width: 15px;
+      display: block;
+      position: absolute;
+      top: 10px;
+      left: 5px;
+      transform: rotate(90deg);
+    }
+
+    &.expanded .list-item__expand-chevron {
+      -webkit-transform: rotate(0);
+      transform: rotate(0);
+      &::before {
+        opacity: 0;
+      }
+    }
+  }
+}
