ページ遷移を少し改善

--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -25,7 +25,7 @@
 </p>
 
 <p>
-  <img src="{{item.img2}}" (click)="onImgChange()">
+  <img src="{{item.image}}" (click)="onImgChange()">
 </p>
 
 <p (click)="onEditEndClicked()">
