--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -2,7 +2,7 @@
   <div class="center">お薬手帳</div>
 </ons-toolbar>
 
-<ons-list-item expandable *ngFor="let item of list3">
+<ons-list-item expandable *ngFor="let item of items">
 <!--  profileアイコンを一時的に非表示にしています。
   <div class="left">
     <img class="list-item__thumbnail" src="{{item.img1}}">
@@ -10,14 +10,14 @@
 -->
   <div class="center">
     <div class="heading_container">
-      <div class="list-item__num">{{item.num_str}}</div>
-      <div class="list-item__date">{{item.date_str}}</div>
+      <div class="list-item__num">No. {{item.id}}</div>
+      <div class="list-item__date">{{item.date | date:'yyyy年MM月dd日 hh:mm'}}</div>
     </div>
-    <span class="list-item__subtitle">{{item.memo_str}}</span>
+    <span class="list-item__subtitle">{{item.memo}}</span>
   </div>
   <div class="expandable-content">
     <div class="img_container">
-      <img class="expandable-img" src="{{item.img2}}" (click)="onListClicked(item)">
+      <img class="expandable-img" src="{{item.image}}" (click)="onItemClicked(item)">
       <i class="far fa-eye"></i>
     </div>
   </div>
