--- a/src/app/main-tab.html
+++ b/src/app/main-tab.html
@@ -2,9 +2,9 @@
   <ons-tabbar [attr.animation]="animation" position="auto">
     <div class="tabbar__content"></div>
     <div class="tabbar">
-      <ons-tab icon="fa-home" label="ホーム" [page]="home" active></ons-tab>
       <ons-tab icon="fa-wrench" label="設定" [page]="setting"></ons-tab>
-      <ons-tab icon="fa-camera" label="追加" (click)="onPlusButtonClick()"></ons-tab>
+      <ons-tab icon="fa-home" label="ホーム" [page]="home" active></ons-tab>
+      <ons-tab icon="fa-camera" label="追加" (click)="onPlusButtonClick($event)"></ons-tab>
     </div>
   </ons-tabbar>
 </div>
