--- a/src/app/setting/setting.html
+++ b/src/app/setting/setting.html
@@ -4,7 +4,7 @@
 <div class="content">
   <ons-list>
     <ons-list-header>基本情報</ons-list-header>
-    <ons-list-item>プライバシーポリシー</ons-list-item>
+    <ons-list-item (click)="onRegulationClicked()" modifier="chevron" tappable>利用規約</ons-list-item>
     <ons-list-item (click)="onAboutClicked()"  modifier="chevron" tappable>このアプリについて</ons-list-item>
     <ons-list-item (click)="onInquiryClicked()"  modifier="chevron" tappable>お問い合わせ</ons-list-item>
     <ons-list-header>アカウント</ons-list-header>
