編集画面での入力を保存するようにしました

--- a/src/app/home/preview.html
+++ b/src/app/home/preview.html
@@ -28,7 +28,7 @@
     <dd class="definitionList__description">{{(item$ | async).memo}}</dd>
 
     <dt class="definitionList__term">保存日</dt>
-    <dd class="definitionList__description">{{(item$ | async).date | date:'yyyy年MM月dd日 hh:mm'}}</dd>
+    <dd class="definitionList__description">{{(item$ | async).date | date:'yyyy年MM月dd日 HH:mm'}}</dd>
   </dl>
 
   <div class="imgPreview">
