--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -20,7 +20,7 @@
 
   <p>
     <label class="inputHeading" for="addDate">保存日</label>
-    <input id="addDate" class="inputArea" type="text" value="{{item.date | date:'yyyy年MM月dd日 hh:mm'}}">
+    <input id="addDate" class="inputArea" type="text" value="{{item.date | date:'yyyy年MM月dd日 HH:mm'}}">
   </p>
 
   <div class="imgPreview">
@@ -30,7 +30,7 @@
 
   <p class="updateButton" (click)="onEditEndClicked()">
     <ons-button modifier="large--cta">
-      更新
+      登録
     </ons-button>
   </p>
 </div>
