日付入力方法をdatepickerに修正

--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -20,7 +20,7 @@
 
   <p>
     <label class="inputHeading" for="addDate">保存日</label>
-    <input id="addDate" class="inputArea" type="text" value="{{item.date | date:'yyyy年MM月dd日 HH:mm'}}">
+    <input id="addDate" class="inputArea" type="datetime-local" value="{{item.date | date:'yyyy-MM-ddTHH:mm'}}">
   </p>
 
   <div class="imgPreview">
