photo library confirmed

--- a/src/app/main-tab.html
+++ b/src/app/main-tab.html
@@ -1,6 +1,7 @@
 <div class="content">
   <ons-tabbar [attr.animation]="animation" position="auto">
     <div class="tabbar__content"></div>
+    <img id="largeImage" />
     <div class="tabbar">
       <ons-tab icon="fa-wrench" label="設定" [page]="setting"></ons-tab>
       <ons-tab icon="fa-home" label="ホーム" [page]="home" active></ons-tab>
