--- a/src/app/main-tab.html
+++ b/src/app/main-tab.html
@@ -13,8 +13,8 @@
    <div class="action-sheet-mask"></div>
    <div class="action-sheet">
      <div class="action-sheet-title">Static action sheet</div>
-     <ons-action-sheet-button icon="md-square-o" (click)="onPlusButtonClick($event,"Camera");actionSheet.hide()">Camera</ons-action-sheet-button>
-     <ons-action-sheet-button icon="md-square-o" (click)="onPlusButtonClick($event,"PhotoLibrary");actionSheet.hide()">Photo Library</ons-action-sheet-button>
+     <ons-action-sheet-button icon="md-square-o" (click)="onPlusButtonClick($event,'Camera');actionSheet.hide()">Camera</ons-action-sheet-button>
+     <ons-action-sheet-button icon="md-square-o" (click)="onPlusButtonClick($event,'PhotoLibrary');actionSheet.hide()">Photo Library</ons-action-sheet-button>
      <ons-action-sheet-button icon="md-square-o" (click)="actionSheet.hide()" modifier="destructive">Cancel</ons-action-sheet-button>
      <!-- <ons-action-sheet-button icon="md-close" (click)="actionSheet.hide()">Cancel</ons-action-sheet-button> -->
    </div>
