--- a/src/app/setting/about.html
+++ b/src/app/setting/about.html
@@ -1,5 +1,5 @@
 <ons-toolbar [attr.modifier]="modifier">
-  <div class="left" (click)="onCloseClicked()"><ons-toolbar-button><ons-icon icon="fa-times"></ons-icon></ons-toolbar-button></div>
+  <div class="left" (click)="onCloseClicked()"><ons-toolbar-button><ons-icon icon="fa-backward"></ons-icon></ons-toolbar-button></div>
   <div class="center">このアプリについて</div>
 </ons-toolbar>
 <div class="content">
