change from textarea to input

--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -15,7 +15,7 @@
 <div class="previewContents">
   <p>
     <label class="inputHeading" for="memo">メモ</label>
-    <textarea id="memo" class="inputArea">{{item.memo}}</textarea>
+    <input type="text" id="memo" class="inputArea" maxlength="50" size="25">{{item.memo}}
   </p>
 
   <p>
