永続的に保存するようにした

--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -24,7 +24,7 @@
   </p>
 
   <div class="imgPreview">
-    <img class="imgPreview__img" [src]="item.image | cdvphotolibrary" (click)="actionSheet.show()">
+    <img class="imgPreview__img" [src]="item.image | cdvfile" (click)="actionSheet.show()">
     <i class="imgPreview__edit-icon far fa-edit" (click)="actionSheet.show()"></i>
   </div>
 
