homeの時間表示を24時間表記に修正

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -19,7 +19,7 @@
   <div class="heading center">
     <div class="heading-container">
       <div class="heading-container__num">No. {{item.id}}</div>
-      <div class="heading-container__date">{{item.date | date:'yyyy年MM月dd日 hh:mm'}}</div>
+      <div class="heading-container__date">{{item.date | date:'yyyy年MM月dd日 HH:mm'}}</div>
     </div>
     <span class="heading__memo">{{item.memo}}</span>
   </div>
