editの日付を削除付加に修正(inputタグにrequired付与)

--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -20,7 +20,7 @@
 
   <p>
     <label class="inputHeading" for="addDate">保存日</label>
-    <input id="addDate" class="inputArea" type="datetime-local" value="{{item.date | date:'yyyy-MM-ddTHH:mm'}}" (blur)="value_check();">
+    <input id="addDate" class="inputArea" type="datetime-local" value="{{item.date | date:'yyyy-MM-ddTHH:mm'}}" required (blur)="value_check();">
   </p>
 
   <div class="imgPreview">
