memoを複数行入力した際にホームとプレビュー画面で改行をそのまま表示

--- a/src/app/home/edit.html
+++ b/src/app/home/edit.html
@@ -15,7 +15,7 @@
 <div class="previewContents">
   <p>
     <label class="inputHeading" for="memo">メモ</label>
-    <input type="text" id="memo" class="inputArea" maxlength="50" size="25" value="{{item.memo}}" placeholder="コメントを入力">
+    <textarea id="memo" class="inputArea">{{item.memo}}</textarea>
   </p>
 
   <p>
