--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<script type="text/javascript" src="cordova.js" *ngIf="isSmartPhone()"></script>
+<!-- これがないとonDeviceReadyが起動しない -->
+<script type="text/javascript" src="cordova.js" *ngIf="_deviceReadyService.isSmartPhone()"></script>
 <ons-page>
   <ons-navigator swipable [page]="page"></ons-navigator>
 </ons-page>
