プレビューでスワイプして戻れるようにした

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<ons-page>
-  <ons-navigator swipable [page]="page"></ons-navigator>
-</ons-page>
+<ons-gesture-detector>
+  <ons-page>
+    <ons-navigator swipable [page]="page"></ons-navigator>
+  </ons-page>
+</ons-gesture-detector>
