--- a/src/app/home/preview.html
+++ b/src/app/home/preview.html
@@ -22,7 +22,7 @@
   </div>
 </ons-toolbar>
 
-<div class="previewContents">
+<div class="previewContents" (swiperight)="onCloseClicked()">
   <dl class="definitionList">
     <dt class="definitionList__term">メモ</dt>
     <dd class="definitionList__description">{{(item$ | async).memo}}</dd>
