--- a/src/app/home/preview.scss
+++ b/src/app/home/preview.scss
@@ -4,6 +4,8 @@
   background: #FFFFDB;
   padding: 1.0em;
   height: 100%;
+  height: auto;
+  min-height: 100%;
 }
 .definitionList__term{
   color: #FF6B2A;
