アプリバージョンを追加

--- a/src/app/setting/setting.html
+++ b/src/app/setting/setting.html
@@ -7,7 +7,8 @@
     <ons-list-item (click)="onRegulationClicked()" modifier="chevron" tappable>利用規約</ons-list-item>
     <ons-list-item (click)="onAboutClicked()"  modifier="chevron" tappable>このアプリについて</ons-list-item>
     <ons-list-item (click)="onInquiryClicked()"  modifier="chevron" tappable>お問い合わせ</ons-list-item>
-    <ons-list-header>アカウント</ons-list-header>
-    <ons-list-item (click)="onAccountButtonClicked()" modifier="chevron" tappable>個人情報設定</ons-list-item>
+    <!-- 一旦個人情報設定の内容はないのでコメントアウト -->
+    <!-- <ons-list-header>アカウント</ons-list-header> -->
+    <!-- <ons-list-item (click)="onAccountButtonClicked()" modifier="chevron" tappable>個人情報設定</ons-list-item> -->
   </ons-list>
 </div>
