--- a/src/app/setting/about.html
+++ b/src/app/setting/about.html
@@ -4,11 +4,16 @@
 </ons-toolbar>
 <div class="content">
   <div class="version">
-    <p class="heading">アプリバージョン</p>
-    xxxxxxxx
+    <h5 class="heading">アプリバージョン</h5>
+    <div class="version__content">{{currentVersion}}</div>
   </div>
   <div class="release-note">
-    <p class="heading">リリースノート</p>
-    xxxxxxxx
+    <h5 class="heading">リリースノート</h5>
+
+    <pre>
+    1.0.0
+    アプリを公開しました！
+    画像で薬の情報を管理しましょう！
+    </pre>
   </div>
 </div>
