フォントを合わせた

--- a/src/app/setting/about.html
+++ b/src/app/setting/about.html
@@ -10,10 +10,10 @@
   <div class="release-note">
     <h5 class="heading">リリースノート</h5>
 
-    <pre>
-    1.0.0
-    アプリを公開しました！
-    画像で薬の情報を管理しましょう！
-    </pre>
+    <div class="release-note__content">
+      1.0.0<br>
+      アプリを公開しました！<br>
+      画像で薬の情報を管理しましょう！
+    </div>
   </div>
 </div>
