--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,10 @@
     }
   }
 
+  ons-list-item[data-existence="true"]  .list-item__expand-chevron {
+    display:none;
+  }
+
   .list-item--expandable{
     .list-item__expand-chevron::before {
       content: "";
