ミスってたので再修正

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@
     }
   }
 
-  ons-list-item[data-existence="true"]  .list-item__expand-chevron {
+  ons-list-item[data-existence="false"]  .list-item__expand-chevron {
     display:none;
   }
 
