app name changed

--- a/src/app/setting/regulation/regulation.component.html
+++ b/src/app/setting/regulation/regulation.component.html
@@ -5,7 +5,7 @@
 
 <div class="pageContent" (swiperight)="onCloseClicked()">
   <div class="h3">制定：2019年4月1日</div>
-  <p>本規約は当運営（以下「甲」）が「仮題：電子お薬手帳」事業を提供する「電子版お薬手帳」と称するアプリケーション（以下「本アプリケーション」といいます）の利用条件を定めるものです。 ユーザー（以下「乙」）は、本規約に従い本アプリケーションを利用するものとします。乙は本アプリケーションを利用することにより本規約の全ての条件に同意したものと看做されます。（未成年の方がご利用になる場合には、親権者の方に事前にご承諾いただき、ご一緒にご利用ください。）</p>
+  <p>本規約は当運営（以下「甲」）が「お薬手帳レコード」と称するアプリケーション（以下「本アプリケーション」といいます）の利用条件を定めるものです。 ユーザー（以下「乙」）は、本規約に従い本アプリケーションを利用するものとします。乙は本アプリケーションを利用することにより本規約の全ての条件に同意したものと看做されます。（未成年の方がご利用になる場合には、親権者の方に事前にご承諾いただき、ご一緒にご利用ください。）</p>
 
   <div class="h4">第１条（本サービスの内容及び本規約等の変更）</div>
   <ol class="counterList">
