プレビューのタイトルを修正

--- a/src/app/home/preview.html
+++ b/src/app/home/preview.html
@@ -9,7 +9,7 @@
       </ons-icon>
     </ons-toolbar-button>
   </div>
-  <div class="center">No. {{(item$ | async).id}}</div>
+  <div class="center">プレビュー</div>
   <div class="right" (click)="onEditClicked()">
     <ons-toolbar-button>
       <ons-icon
